  they use ``uint32`` instead.
- The ``strutils.unindent`` procedure has been rewritten. Its parameters now
  match the parameters of ``strutils.indent``. See issue [#4037](https://github.com/nim-lang/Nim/issues/4037)
  for more details.
- The ``matchers`` module has been deprecated. See issue [#2446](https://github.com/nim-lang/Nim/issues/2446)
  for more details.


Library Additions
-----------------

- The rlocks module has been added providing reentrant lock synchronization
  primitive.
- A generic "sink operator" written as ``&=`` has been added to the ``system`` and the ``net`` modules.


Compiler Additions
------------------

- Added a new ``--noCppExceptions`` switch that allows to use default exception
  handling (no ``throw`` or ``try``/``catch`` generated) when compiling to C++
  code.

Language Additions
------------------

- Nim now supports a ``.this`` pragma for more notational convenience.
- Nim now supports a different ``using`` statement for more convenience.
- Nim now supports ``partial`` object declarations to mitigate the problems
  that arise when types are mutually dependent and yet should be kept in
  different modules.


2016-01-27 Nim in Action is now available!
==========================================

.. raw::html

  <a href="https://manning.com/books/nim-in-action?a_aid=niminaction&a_bid=78a27e81">
    <img src="assets/niminaction/banner.jpg" alt="New in Manning Early Access Program: Nim in Action!" width="682"/>
  </a>

We are proud to announce that *Nim in Action*, a book about the Nim programming
language, is now available!

The book is available at this URL:
`https://www.manning.com/books/nim-in-action <https://manning.com/books/nim-in-action?a_aid=niminaction&a_bid=78a27e81>`_

The first three chapters are available for download
as an eBook through Manning's Early Access program. You can download a free
sample of the book containing the first chapter as well!
